# heterosplat

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  _gsplat_smoke.py
CUDA/Heterosplat/Source/: CMakeLists.txt  ForwardBackwardSmokeTest.cu  NormalizeAndFuse.cu  RenderOrbit.cu  TrainSingleScene.cu
CUDA/Heterosplat/Source/Colmap/: CMakeLists.txt  ColmapReader.cpp  ColmapReader.h
CUDA/Heterosplat/Source/Core/: CMakeLists.txt  CubOperations.cu  CubOperations.h  Tensor.h
CUDA/Heterosplat/Source/IO/: CMakeLists.txt  ImageIO.cpp  ImageIO.h  PlyReader.cpp  PlyReader.h  PlyWriter.cpp  PlyWriter.h
CUDA/Heterosplat/Source/Kernels/: CMakeLists.txt
CUDA/Heterosplat/Source/Kernels/Heterosplat/: CMakeLists.txt  IntersectOffset.cu  IntersectOffset.h  IntersectTile.cu  IntersectTile.h  ProjectionEWA3DGSFused.cu  ProjectionEWA3DGSFused.h  QuatScaleToCovar.cu  QuatScaleToCovar.h  RasterizeToPixels3DGS.cu  RasterizeToPixels3DGS.h  SphericalHarmonics.cu  SphericalHarmonics.h
CUDA/Heterosplat/Source/Normalize/: CMakeLists.txt  Convention.cpp  Convention.h  Transform.cu  Transform.h
CUDA/Heterosplat/Source/Training/: Activations.cu  Activations.h  AdamOptimizer.cu  AdamOptimizer.h  CMakeLists.txt  ImageLoss.cu  ImageLoss.h
CUDA/Heterosplat/Source/UnitTests/: CMakeLists.txt  DeviceBuffer.h  OracleFixture.h
CUDA/Heterosplat/Source/UnitTests/Colmap/: ColmapReader_tests.cu
CUDA/Heterosplat/Source/UnitTests/Core/: Tensor_tests.cu
CUDA/Heterosplat/Source/UnitTests/Fixtures/IntersectOffset/: README.md
CUDA/Heterosplat/Source/UnitTests/Fixtures/IntersectTile/: README.md
CUDA/Heterosplat/Source/UnitTests/Fixtures/ProjectionEWA3DGSFused/: README.md
CUDA/Heterosplat/Source/UnitTests/Fixtures/QuatScaleToCovar/: README.md
CUDA/Heterosplat/Source/UnitTests/Fixtures/RasterizeToPixels3DGS/: README.md
CUDA/Heterosplat/Source/UnitTests/Fixtures/SphericalHarmonics/: README.md
CUDA/Heterosplat/Source/UnitTests/IO/: PlyRoundTrip_tests.cu
CUDA/Heterosplat/Source/UnitTests/Kernels/Heterosplat/: IntersectOffset_oracle_tests.cu  IntersectOffset_tests.cu  IntersectTile_oracle_tests.cu  IntersectTile_tests.cu  ProjectionEWA3DGSFused_oracle_tests.cu  ProjectionEWA3DGSFused_tests.cu  QuatScaleToCovar_oracle_tests.cu  QuatScaleToCovar_tests.cu  RasterizeToPixels3DGS_oracle_tests.cu  RasterizeToPixels3DGS_tests.cu  SphericalHarmonics_oracle_tests.cu  SphericalHarmonics_tests.cu
CUDA/Heterosplat/Source/UnitTests/Normalize/: Convention_tests.cu  Transform_tests.cu
CUDA/Heterosplat/Source/UnitTests/Training/: Activations_tests.cu  AdamOptimizer_tests.cu  ImageLoss_tests.cu  TrainSmokeTest.cu
CUDA/Heterosplat/Source/UnitTests/Viewer/: ColormapDebug_tests.cu
CUDA/Heterosplat/Source/Viewer/: CMakeLists.txt  ColormapDebug.cu  ColormapDebug.h  SplatViewer.cu
Documents/LaTeX/: .gitignore  KernelMathematics.tex  NormalizationMathematics.tex  ViewerArchitecture.tex
Scripts/: CaptureGsplatOracle.py  run_configuration.yml.example  run_container.sh  run_tests.sh
